ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chakra-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: khala-config
          servicePort: 8888
        path: /khala-config/(.*)
